# YOLO-World

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  build_and_run.sh  demo.py  image_demo.py  inference.ipynb  pretrained_weights  pyproject.toml  requirements.txt  setup.cfg  setup.py
configs/deploy/: detection_onnxruntime-fp16_dynamic.py  detection_onnxruntime-int8_dynamic.py  detection_onnxruntime_static.py  detection_tensorrt-fp16_static-640x640.py  detection_tensorrt-int8_static-640x640.py
configs/finetune_coco/: README.md  yolo_world_l_dual_vlpan_2e-4_80e_8gpus_finetune_coco.py  yolo_world_l_dual_vlpan_2e-4_80e_8gpus_finetune_rf100.py  yolo_world_l_dual_vlpan_2e-4_80e_8gpus_mask-refine_finetune_coco.py  yolo_world_l_efficient_neck_2e-4_80e_8gpus_finetune_coco.py  yolo_world_l_efficient_neck_2e-4_80e_8gpus_mask-refine_finetune_coco.py  yolo_world_v2_l_efficient_neck_2e-4_80e_8gpus_mask-refine_finetune_coco.py  yolo_world_v2_l_rep_vlpan_bn_2e-4_80e_8gpus_mask-refine_finetune_coco.py  yolo_world_v2_l_vlpan_bn_2e-4_80e_8gpus_finetune_coco.py  yolo_world_v2_l_vlpan_bn_2e-4_80e_8gpus_finetune_coco_womixup.py  yolo_world_v2_l_vlpan_bn_2e-4_80e_8gpus_mask-refine_finetune_adddecay_coco.py  yolo_world_v2_l_vlpan_bn_2e-4_80e_8gpus_mask-refine_finetune_coco.py  yolo_world_v2_l_vlpan_bn_sgd_1e-3_40e_8gpus_finetune_coco.py  yolo_world_v2_l_vlpan_bn_sgd_1e-3_80e_8gpus_mask-refine_finetune_coco.py  yolo_world_v2_m_vlpan_bn_2e-4_80e_8gpus_mask-refine_finetune_adddecay_coco.py  yolo_world_v2_m_vlpan_bn_2e-4_80e_8gpus_mask-refine_finetune_coco.py  yolo_world_v2_s_bn_2e-4_80e_8gpus_mask-refine_finetune_coco.py  yolo_world_v2_s_pt_vlpan_bn_sgd_1e-3_80e_8gpus_finetune_rf100_construction_safety.py  yolo_world_v2_s_rep_efficient_vlpan_bn_2e-4_80e_8gpus_mask-refine_finetune_coco.py  yolo_world_v2_s_rep_efficient_vlpan_sgd_1e-3_80e_8gpus_mask-refine_finetune_coco.py  yolo_world_v2_s_rep_efficient_vlpan_sgd_2e-3_80e_8gpus_mask-refine_finetune_coco.py  yolo_world_v2_s_rep_efficient_vlpan_sgd_5e-4_80e_8gpus_mask-refine_finetune_coco.py  yolo_world_v2_s_rep_vlpan_bn_2e-4_80e_8gpus_mask-refine_finetune_coco.py  yolo_world_v2_s_rep_vlpan_bn_sgd_1e-3_80e_8gpus_mask-refine_finetune_coco.py  yolo_world_v2_s_vlpan_bn_2e-4_80e_8gpus_mask-refine_finetune_adddecay_coco.py  yolo_world_v2_s_vlpan_bn_2e-4_80e_8gpus_mask-refine_finetune_coco.py  yolo_world_v2_s_vlpan_bn_2e-4_80e_8gpus_mask-refine_nocopypaste_finetune_coco.py  yolo_world_v2_s_vlpan_bn_sgd_1e-3_80e_8gpus_finetune_rf100_aquarium.py  yolo_world_v2_s_vlpan_bn_sgd_1e-3_80e_8gpus_finetune_rf100_construction_safety.py  yolo_world_v2_s_vlpan_bn_sgd_1e-3_80e_8gpus_finetune_rf100_flir_camera.py  yolo_world_v2_s_vlpan_bn_sgd_1e-3_80e_8gpus_finetune_rf100_grass_weeds.py  yolo_world_v2_s_vlpan_bn_sgd_1e-3_80e_8gpus_finetune_rf100_paper_parts.py  yolo_world_v2_s_vlpan_bn_sgd_1e-3_80e_8gpus_finetune_rf100_sedimentary_features.py  yolo_world_v2_s_vlpan_bn_sgd_1e-3_80e_8gpus_finetune_rf100_weed_crop_aerial.py  yolo_world_v2_s_vlpan_bn_sgd_2e-4_80e_8gpus_mask-refine_nocopypaste_finetune_coco.py  yolo_world_v2_s_vlpan_bn_yolonas_recipe_finetune_rf100_flir_camera.py  (+5 more)
data/: README.md  coco  flickr  images  texts
demo/: README.md  gradio_demo.py  image_demo.py  image_prompt_demo.py  segmentation_demo.py  simple_demo.py  video_demo.py
deploy/: deploy.py  deploy_test.py  export_onnx.py  image-demo.py  onnx_demo.py  tflite_demo.py
deploy/easydeploy/deepstream/: CMakeLists.txt  README.md  README_zh-CN.md  deepstream_app_config.txt
deploy/easydeploy/deepstream/configs/: config_infer_rtmdet.txt  config_infer_yolov8.txt
deploy/easydeploy/deepstream/custom_mmyolo_bbox_parser/: nvdsparsebbox_mmyolo.cpp
docs/: data.md  deploy.md  faq.md  finetuning.md  installation.md  prompt_yolo_world.md  reparameterize.md  tflite_deploy.md  update_20250123.md  updates.md  yoloworld_v2_results.md
requirements/: basic_requirements.txt  demo_requirements.txt  onnx_requirements.txt
scripts/: dist_test.sh  inference.py  test_lvis.py  unit_test.py
tools/: dist_test.sh  dist_train.sh  generate_image_prompts.py  generate_text_prompts.py  reparameterize_yoloworld.py  test.py  train.py
yolo_world/: __init__.py  version.py
yolow/: __init__.py  dist_utils.py  logger.py
(+172 files in other folders)
