[build-system]
requires = ["setuptools","wheel","torch"]
build-backend = "setuptools.build_meta"

[project]
name = "yolo_world"
version = "0.1.0"
description = "YOLO-World: Real-time Open Vocabulary Object Detection"
readme = "README.md"
keywords = ["object detection"]
authors = [
    { name = "Tencent AILab", email = "ronnysong@tencent.com" },
]
license = {text = "Apache License 2.0"}

classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">= 3.7"

dependencies = [
    "wheel",
    "torch==2.1.2",
    "torchvision==0.16.2",
    "transformers==4.36.2",
    "tokenizers",
    "numpy",
    "opencv-python==4.9.0.80",
    "supervision",
    "openmim",
    "mmcv<2.2.0",
    "mmdet>=3.0.0",
    "mmengine==0.10.4",
    "mmyolo @ git+https://github.com/onuralpszr/mmyolo.git",
    "timm==0.6.13",
    "albumentations",
]

[tool.setuptools]
package-dir = {"yolo_world" = "yolo_world"}
include-package-data = false
license-files = ["LICENSE"]
zip-safe = true

[tool.setuptools.packages.find]
include = ["yolo_world*"]
exclude = ["docs*", "tests*","third_party*","assets*"]